# treaty

./: .gitignore  .prettierignore  .prettierrc  .prototools  README.md  angular.json  build.ts  bun.lockb  bunfig.toml  cargo.toml  index.html  moon.yml  nx.json  package-lock.json  package.json  server-backup.ts  server.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
.moon/: workspace.yml
.moon/tasks/: node.yml
apps/repl/: index.html  moon.yml  project.json  tsconfig.app.json  tsconfig.spec.json  vite.config.ts
apps/repl/src/: main.ts  styles.css
apps/repl/src/app/: app.component.ts  app.config.ts  app.treaty  treat-example.treaty
apps/repl/src/app/component/: logo.treaty
apps/repl/src/app/lang-treaty/: parser.terms.ts  parser.ts  tokens.ts  treatyjs.ts
apps/repl/src/app/utils/: highlighter.ts  prettier.ts
apps/repl/src/tools/: mock-zone.ts
apps/repl/src/tools/angular/: buildOptimizerPlugin.ts  configPlugin.ts  devPlugin.ts  index.ts
apps/repl/src/tools/treaty-sfc/: compiler.ts  printer.ts  treat-to-ivy.ts
apps/rust/authoring/: Cargo.toml  moon.yml  project.json
apps/rust/authoring/src/: main.rs  test.treaty
apps/rust/authoring/src/angular/decorators/: core.rs
apps/rust/authoring/src/angular/transformers/: injectable.rs
apps/rust/authoring/src/html/: mod.rs  parser.rs
apps/rust/authoring/src/treaty/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
build-fail/: piscina.js
lang-treaty/: tokens.ts  treatyjs.grammar  treatyjs.grammar.d.ts  treatyjs.grammar.terms.d.ts  treatyjs.ts
language-tool/language-server/: package.json
language-tool/language-server/src/: index.ts  languagePlugin.ts
language-tool/vscode/: package.json
language-tool/vscode/src/: extension.ts
libs/authoring/node/: moon.yml
libs/authoring/node/npm/darwin-arm64/: package.json
libs/authoring/node/npm/linux-arm-gnueabihf/: README.md
libs/authoring/node/npm/linux-arm64-gnu/: README.md
libs/authoring/treaty_authoring/: moon.yml
libs/treaty/edenclient/: jest.config.ts  jsr.json  moon.yml  package.json
libs/treaty/edenclient/src/: index.ts
libs/typescript/compiler/: moon.yml  package.json  project.json  tsconfig.json
libs/typescript/compiler/src/: index.ts
libs/typescript/vite/: jest.config.ts  moon.yml  package.json
ngx/: Cargo.toml  package.json
ngx/src/: lib.rs  main.rs  parser.rs  test.js
ngx/transform/: Cargo.toml
ngx/transform/src/: lib.rs
ngx/transform/tests/: fixture.rs
ngx/transform/tests/fixtures/all/: input.ngx  output.js
src/: index.html  main.server.ts  main.ts  setup-tests.ts  setup.ts
src/app/: api.service.ts  app.component.ts  app.config.server.ts  app.config.ts  app.routes.ts  bun-routing.d.ts
src/app/pages/post/: [id].ts  simple.ts
src/app/post/: post.component.spec.ts  post.component.ts
src/app/treaty/: error.ts  index.ts  types.ts
src/app/treaty/utils/: typesafe.ts
src/libs/edenclient/: .gitignore  LICENSE  README.md  error.ts  index.ts  jsr.json  mod.ts  package.json  types.ts
src/libs/edenclient/utils/: other.ts  typesafe.ts
tools/vite/: configPlugin.ts  devPlugin.ts
tools/vite/angular/: buildOptimizerPlugin.ts  buildPlugin.ts  devPlugin.ts  dirImporterPlugin.ts  requiresLinking.ts
tools/vite/angular/swc/: components.ts
tools/vite/angular/utils/: getGlobalObject.ts
tools/vite/elysia/: dev-server.ts
tools/vite/routing/: index.ts
tools/vite/sfc/: index-custom-syntax.ts  index.js
tools/vite/swc/: injector.ts
tools/vite/swc/wasm/swc-angular/: Cargo.toml  package.json
tools/vite/swc/wasm/swc-angular/src/: angular.rs  lib.rs
tools/vite/swc/wasm/swc-angular/src/classes/: module.rs
treaty/: .gitignore  Cargo.toml  README.md  bun.lockb  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json
treaty-utilities/: alysia.ts  angular.ts  mock-create-histogram.ts  routes.ts  setup-tests.ts
treaty/apps/repl/: tsconfig.json  vite.config.ts
treaty/apps/repl-e2e/: cypress.config.ts  project.json
treaty/apps/repl/src/: main.ts
treaty/apps/rust/authoring/: Cargo.toml
treaty/apps/rust/authoring/src/: main.rs  parser.rs  test.ts  test_gen.ts
treaty/apps/rust/authoring/src/angular/: amgular.rs  angular.rs  context.rs  dependency.rs  mod.rs  runtime.rs
treaty/apps/rust/authoring/src/angular/decorators/: core.rs  injectable.rs  mod.rs
treaty/apps/rust/authoring/src/angular/transformers/: dependency.rs  injectable.rs  mod.rs
treaty/apps/rust/authoring/src/html/: mod.rs  parser.rs  tokenizer.rs
treaty/apps/rust/authoring/src/treaty/: lexer.rs  mod.rs
treaty/libs/authoring/node/: Cargo.toml  index.js  package.json  project.json
treaty/libs/authoring/treaty_authoring/: Cargo.toml  project.json
treaty/libs/treaty/edenclient/: .eslintrc.json  ng-package.json  project.json
treaty/libs/typescript/compiler/: package.json  tsconfig.json
treaty/libs/typescript/vite/: project.json
(+51 files in other folders)
