[package]
description = "Treaty plugin for https://swc.rs"
edition = "2021"
name = "swc_plugin_treaty_authroing"
publish = false
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
treaty_authoring = { path = "./transform"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
swc_atoms = "0.6.5"
swc_common = { version = "0.33.17", features = ["concurrent"] }
swc_core = { version = "0.90.6", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.112.2"
swc_ecma_utils = "0.127.3"
swc_ecma_visit = "0.98.2"
swc_plugin_macro = "0.9.16"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }