[package]
name = "treaty_authoring"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]


[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }
swc_atoms = "0.6.5"
swc_cached = "0.3.19"
swc_common = "0.33.17"
swc_ecma_ast = "0.112.2"
swc_ecma_visit = "0.98.2"
serde_json = "1.0.79"
regex = "1.10.3"


[dev-dependencies]
swc_ecma_parser = "0.143.3"
swc_ecma_transforms_base = "0.137.3"
swc_ecma_transforms_testing = "0.140.3"
testing = "0.35.18"