[package]
name = "rust_authoring"
version = "0.1.0"
edition = "2021"


[dependencies]
oxc = "0.9.0"
oxc_allocator = "0.9.0"
oxc_parser = "0.9.0"
oxc_span = "0.9.0"
oxc_semantic = "0.9.0"
oxc_transformer = "0.9.0"
oxc_codegen = "0.9.0"
oxc_diagnostics = "0.9.0"
oxc_ast    = { version = "0.9.0", features = ["serde"] }
swc_visit = "0.5.3"
swc_html_ast = "0.33.17"
swc_css = "0.157.37"
assert-unchecked = { version = "0.1.2" }
bitflags         = { version = "2.4.2" }
rustc-hash       = { version = "1.1.0" }
num-bigint       = { version = "0.4.4" }
seq-macro        = { version = "0.3.5" }
serde_json = { version = "1.0.114" }
regex = "1"
memchr = "2.7.1"
cargo-watch = "8.5.2"
once_cell = "1.19.0"
phf = "0.11.2"
base64     = "0.22.0"
lazy_static = "1.4.0"
tree-sitter = "~0.20.10"
tree-sitter-angular = { git = "https://github.com/dlvandenberg/tree-sitter-angular" }

[dev-dependencies]

miette     = { version = "7.1.0", features = ["fancy-no-backtrace"] }
ouroboros  = "0.18.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
