[package]
name = "swc-angular"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }
swc_common = { version = "0.33.17", features = ["concurrent"] }
swc_ecma_ast = "0.112.2"
swc_ecma_utils = "0.127.3"
swc_ecma_visit = "0.98.2"
swc_ecma_codegen = "0.148.3"
rand = "0.8"
serde_derive = "1.0"
serde_json = "1.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
